# molenc

./: .coveragerc  .gitignore  LICENSE  MANIFEST.in  README.md  TESTING.md  TESTING_REPORT.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-optional.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
.trae/documents/: docker_encoder_solution.md  提升 MolEnc 在多技术路线_环境下的快速部署能力.md
docker/: nginx.conf
docker/base/: Dockerfile.base  requirements.base.txt
docker/compose/: docker-compose.yml
docker/docs/: api_reference.md  deployment_guide.md  development_guide.md
docker/encoders/chemberta/: Dockerfile  app.py  requirements.txt
docker/encoders/dmpnn/: Dockerfile  README.md  app.py  build_and_test.sh  dmpnn_encoder.py  examples.py  quickstart.sh  requirements.txt  test_dmpnn.py  test_local.py
docker/encoders/gcn/: Dockerfile  Dockerfile.cuda  app.py  requirements.txt
docker/encoders/maccs/: ADDITION_SUMMARY.md  Dockerfile  README.md  app.py  maccs_encoder.py  requirements.txt
docker/encoders/morgan/: Dockerfile  app.py
docker/encoders/schnet/: Dockerfile  README.md  app.py  build_and_test.sh  examples.py  requirements.txt  schnet_encoder.py  test_local.py  test_schnet.py
docker/examples/: README.md  api_test.py  client_example.py  integration_test.py  integration_test_report.json  maccs_example.py  test_local.py  test_maccs.py  test_report_local.json  test_summary.md
docker/scripts/: build.sh  build_maccs.sh  quickstart.sh
docs/: advanced_features_guide.md  chemberta_usage.md
examples/: chemberta_demonstration.py  morgan_fingerprint_demonstration.py  unimol_demonstration.py
molenc/: __init__.py  cli.py  simple_api.py
molenc/benchmarks/: performance_comparison.py
molenc/cloud/: api_client.py
molenc/configs/: __init__.py  default_environment.yaml  high_performance.yaml
molenc/core/: __init__.py  advanced_dependency_manager.py  api_client.py  base.py  batch_utils.py  config.py  dependency_utils.py  encoder_factory.py  encoder_mixins.py  encoder_utils.py  environment_managed_encoder.py  exception_decorators.py  exceptions.py  execution_backend.py  performance_comparator.py  registry.py  similarity_utils.py  simple_dependency_manager.py  simple_encoder_factory.py  smart_encoder_selector.py  utils.py
molenc/encoders/: __init__.py
molenc/encoders/descriptors/: __init__.py
molenc/encoders/descriptors/fingerprints/: __init__.py  base.py  maccs.py  morgan.py
molenc/encoders/remote/: http_chemberta.py  http_gcn.py  http_morgan.py
molenc/encoders/representations/: __init__.py
molenc/encoders/representations/graph/: __init__.py  gcn.py
molenc/encoders/representations/multimodal/: __init__.py  unimol.py  unimol_versions.py
molenc/encoders/representations/sequence/: __init__.py  chemberta.py
molenc/environments/: __init__.py  advanced_dependency_manager.py  config.py  dependencies.py  manager.py
molenc/isolation/: __init__.py  environment_manager.py  process_wrapper.py  smart_environment_manager.py
molenc/precompiled/: package_manager.py
molenc/preprocessing/: __init__.py  filters.py  standardize.py  utils.py  validators.py
tests/: __init__.py  conftest.py
tests/benchmarks/: __init__.py  test_performance.py
tests/core/: test_base.py  test_exceptions.py  test_registry.py
tests/encoders/: __init__.py  test_fingerprints.py  test_graph.py  test_multimodal.py
tests/environments/: __init__.py  test_config.py  test_dependencies.py  test_manager.py
tests/integration/: __init__.py  test_encoder_workflows.py  test_system_integration.py
tests/preprocessing/: __init__.py  test_filters.py  test_standardize.py  test_utils.py  test_validators.py
tools/: http_server_chemberta.py  http_server_gcn.py  http_server_morgan.py
