[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "molenc"
version = "0.1.0"
description = "A unified molecular encoding library for machine learning"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "MolEnc Development Team", email = "molenc@example.com"},
]
keywords = [
    "molecular encoding",
    "machine learning",
    "cheminformatics",
    "molecular descriptors",
    "molecular fingerprints",
    "deep learning",
    "graph neural networks",
    "transformers",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.19.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "packaging>=20.0",
]

[project.optional-dependencies]
chemistry = [
    "rdkit>=2022.03.1",
]
deep_learning = [
    "torch>=1.12.0",
    "transformers>=4.20.0",
]
graph = [
    "torch>=1.12.0",
    "torch-geometric>=2.1.0",
]
nlp = [
    "gensim>=4.0.0",
    "transformers>=4.20.0",
]
molbert = [
    "torch>=1.12.0",
    "transformers>=4.20.0",
]
visualization = [
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "plotly>=5.9.0",
]
system = [
    "psutil>=5.9.0",
]
environment = [
    "virtualenv>=20.0.0",
]
dev = [
    "pytest>=6.0.0",
    "black>=21.0.0",
    "flake8>=3.9.0",
    "mypy>=0.910",
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=0.5.0",
]
all = [
    "rdkit>=2022.03.1",
    "torch>=1.12.0",
    "transformers>=4.20.0",
    "torch-geometric>=2.1.0",
    "gensim>=4.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "plotly>=5.9.0",
    "psutil>=5.9.0",
    "virtualenv>=20.0.0",
]

[project.scripts]
molenc = "molenc.cli:main"

[project.urls]
Homepage = "https://github.com/molenc/molenc"
Documentation = "https://molenc.readthedocs.io/"
Repository = "https://github.com/molenc/molenc"
"Bug Tracker" = "https://github.com/molenc/molenc/issues"

[tool.setuptools]
packages = ["molenc"]

[tool.setuptools.package-data]
molenc = ["data/*", "configs/*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    ".venv",
    ".tox",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]